2001-03-14 John R. Jackson <jrj@purdue.edu>

	* client-src/selfcheck.c: Send smbclient via pipe instead of command
	  line arg.  Various minor cleanups.  Use pipespawn instead of system()
	  to clean up quoting problems and be consistent with sendsize and
	  sendbackup.
	* client-src/sendbackup-dump.c: Send smbclient via pipe instead of
	  line arg.  Various minor cleanups.
	* client-src/sendbackup-gnutar.c: Send smbclient via pipe instead of
	  line arg.  Various minor cleanups.  Clean up listed incremental file
	  handling.
	* client-src/sendbackup.c: Various minor cleanups.
	* client-src/sendsize.c: Send smbclient via pipe instead of command
	  line arg.  Various minor cleanups.  Clean up listed incremental file
	  handling.
	* common-src/pipespawn.c: Support optional password pipe.  Various
	  minor cleanups.
	* common-src/pipespawn.h: Support optional password pipe.  Various
	  minor cleanups.
	* common-src/util.c: Backport fullread() and fullwrite() from main
	  branch.
	* common-src/util.h: Backport fullread() and fullwrite() from main
	  branch.
	* docs/SAMBA: Update and cleanup.

2001-03-13 John R. Jackson <jrj@purdue.edu>

	* recover-src/extract_list.c (extract_files_child): Fix xfsrestore
	  argument list processing.

2001-03-09 John R. Jackson <jrj@purdue.edu>

	* server-src/taper.c: Initialize tape_fd to -1 and test in a couple
	  more places.	Run normal protocol after a tape startup error (e.g.
	  "cannot overwrite") instead of just exiting to keep driver from
	  reporting a broken pipe.

2001-03-08  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Reported by Eric Schnoebelen <eric@cirr.com>

	* server-src/changer.c (): Fix fd leak.

2001-02-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (info_one): typo.
	* server-src/planner.c (setup_estimate): Don't re-ask for level 0
	if last_level is 0 and FORCE_NO_BUMP is set.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* common-src/stream.h: Move DATABUF_SIZE to stream.h.